--- a/output.css
+++ b/output.css
@@ -539,12 +539,21 @@ video {
   margin-right: 1rem;
 }
 
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .mr-4 {
   margin-right: 1rem;
 }
 
 .flex {
   display: flex;
+}
+
+.table {
+  display: table;
 }
 
 .h-10 {
@@ -597,6 +606,10 @@ video {
 
 .h-4 {
   height: 1rem;
+}
+
+.h-\[200vh\] {
+  height: 200vh;
 }
 
 .w-10 {
@@ -692,6 +705,15 @@ video {
 .px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
+}
+
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.text-center {
+  text-align: center;
 }
 
 .text-lg {
