its finally done fully working i hope this passes the test Aum Namah Shivay

--- a/input.css
+++ b/input.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.InputFields{
+    width: 50rem;
+    height: 4rem;
+}
+
+.InputWrapper{
+    margin-top: 5rem;
+    width: 60rem;
+    height: 40rem;
+
+    border-radius: 1rem;
+}
